--- a/.github/workflows/adopet.yml
+++ b/.github/workflows/adopet.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Start Docker containers (DB and App)
         run: |
           cd infra
-          ./start.sh start pg-dev adopet-dev &
+          ./manage.sh start pg-dev adopet-dev &
           sleep 20
 
       - name: Wait for Laravel to be ready
