--- a/.github/workflows/adopet.yml
+++ b/.github/workflows/adopet.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Give exec permission to scripts
         run: chmod +x infra/manage.sh ./*.sh
 
-      - name: Criar .env para Docker
+      - name: Set environment variables
         run: |
-          echo "DB_CONNECTION=pgsql" >> .env
-          echo "DB_HOST=pg-server-dev" >> .env
-          echo "DB_PORT=5432" >> .env
-          echo "DB_DATABASE=adopet_db" >> .env
-          echo "DB_USERNAME=adopet" >> .env
-          echo "DB_PASSWORD=adopet123" >> .env
+          echo "DB_CONNECTION=${{ secrets.DB_CONNECTION }}" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
     
       - name: Create Docker network manually
         run: docker network create adopet-net || true
