--- a/.github/workflows/adopet.yml
+++ b/.github/workflows/adopet.yml
@@ -22,18 +22,24 @@ jobs:
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> infra/.env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> infra/.env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> infra/.env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> infra/.env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> infra/.env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> infra/.env
           echo "DB_CONNECTION=${{ secrets.DB_CONNECTION }}" >> .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "DB_CONNECTION=${{ secrets.DB_CONNECTION }}" >> www/adopet/.env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >>  www/adopet/.env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >>  www/adopet/.env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >>  www/adopet/.env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >>  www/adopet/.env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> www/adopet/.env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> www/adopet/.env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >>  www/adopet/.env
     
       - name: Create Docker network manually
@@ -47,9 +53,9 @@ jobs:
 
       - name: Wait for Laravel to be ready
         run: |
-          echo "⏳ Aguardando Laravel na porta 8000..."
+          echo "⏳ Aguardando Laravel na porta 8080..."
           for i in {1..60}; do
-            if curl -s http://localhost:8000 > /dev/null; then
+            if curl -s http://localhost:8080 > /dev/null; then
               echo "✅ Laravel disponível!"
               exit 0
             fi
