--- a/.github/workflows/adopet.yml
+++ b/.github/workflows/adopet.yml
@@ -52,11 +52,9 @@ jobs:
 
       - name: Wait for Laravel to be ready
         run: |
-          docker exec adopet-dev php artisan migrate --force
-          docker exec adopet-dev php artisan serve --host=0.0.0.0 --port=8000
           echo "⏳ Aguardando Laravel na porta 8080..."
           for i in {1..60}; do
-            if curl -s http://localhost:8000 > /dev/null; then
+            if curl -s http://localhost:8080/api/usuarios > /dev/null; then
               echo "✅ Laravel disponível!"
               exit 0
             fi
